BB-24252: Create new API endpoint for recalculating order prices during order editing/creation (#39224)
- added new backend ordersubtotals resource
- added an orderSubtotals relation to orders endpoint
- added meta validate operation flag
- added enable_validation entity api config option
- added new rollback_validated_request event for customize_form_data action
- updated add orderSubtotals logic for create and update api actions
- added new --validate option for oro:api:dump command
- added validate operation description for matched API resources
- added reuse of an existing entity for response to the validated operation
- updated orderSubtotals field collapse logic for the orders resource

---------
